re#1039 fixed hover on mobile ??

--- a/skin/frontend/modago/default/sass/design/style/_scrolltop.scss
+++ b/skin/frontend/modago/default/sass/design/style/_scrolltop.scss
@@ -2,7 +2,7 @@
 	width: 50px;
 	height: 50px;
 	position: fixed;
-	bottom: -50px;
+	right: -50px;
 	background-color: #2E2E2E;
 	color: #FFF;
 	font-size: 30px;
@@ -10,13 +10,13 @@
 	text-align: center;
 	line-height: 49px;
 	opacity: 0;
-	transition: opacity 150ms ease, background-color 150ms ease;
+	transition: all 300ms ease;
 	cursor: pointer;
 	z-index: 1000;
 	&.show {
 		opacity: 1;
 	}
-	&:hover {
+	&.hover {
 		background-color: #999999;
 	}
 }
